--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,8 @@
 
 body {
   height: 100vh;
+  margin: 0;
+  padding: 0;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
